--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5</h1>
-<h3 class="date">2015-10-10</h3>
+<h3 class="date">2015-10-12</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -663,7 +663,7 @@ exec pukcab backup</code></pre>
 <p>The <code>restore</code> command restores <a href="#files">files</a> as they were at a given <a href="#date">date</a>.</p>
 <dl>
 <dt>Syntax</dt>
-<dd><p><code>pukcab restore</code> [ –<a href="#directory">directory</a>=<em>directory</em> ] [ –<a href="#name">name</a>=<em>name</em> ] [ –<a href="#date">date</a>=<em>date</em> ] [ <a href="#files"><em>FILES</em></a> … ]</p>
+<dd><p><code>pukcab restore</code> [ –<a href="#in-place">in-place</a> ] [ –<a href="#directory">directory</a>=<em>directory</em> ] [ –<a href="#name">name</a>=<em>name</em> ] [ –<a href="#date">date</a>=<em>date</em> ] [ <a href="#files"><em>FILES</em></a> … ]</p>
 </dd>
 </dl>
 <h3 id="notes-10">Notes</h3>
