--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5</h1>
-<h3 class="date">2015-10-12</h3>
+<h3 class="date">2015-10-13</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -671,6 +671,7 @@ exec pukcab backup</code></pre>
 <li>the <a href="#name">name</a> option is chosen automatically if not specified</li>
 <li>the <a href="#date">date</a> option automatically selects the last backup</li>
 <li>this operation currently requires a working <code>tar</code> system command (usually GNU tar)</li>
+<li><code>--in-place</code> is equivalent to <code>--directory=/</code></li>
 </ul>
 <h2 id="vacuum"><code>vacuum</code></h2>
 <p>The <code>vacuum</code> command initiates clean-up of the catalog and vault to save disk space.</p>
