--- a/MANUAL.html
+++ b/MANUAL.html
@@ -14,7 +14,7 @@
 <body>
 <header>
 <h1 class="title">Pukcab 1.5</h1>
-<h3 class="date">2015-10-13</h3>
+<h3 class="date">2015-10-22</h3>
 </header>
 <nav id="TOC">
 <ul>
@@ -68,6 +68,9 @@
 <li><a href="#frequently-asked-questions">Frequently Asked Questions</a><ul>
 <li><a href="#client-faq">Client FAQ</a></li>
 <li><a href="#server-faq">Server FAQ</a></li>
+</ul></li>
+<li><a href="#internals">Internals</a><ul>
+<li><a href="#logging">Logging</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -1059,10 +1062,109 @@ Missing:  0
 <li>this command must be run as the <code>pukcab</code> user <em>on the server</em></li>
 <li>this command will (probably) take very long and block any backup until it has completed</li>
 </ul>
+<h1 id="internals">Internals</h1>
+<h2 id="logging">Logging</h2>
+<p><code>pukcab</code> tries to generate useful log records by including easy-to-parse details into the events it sends to <a href="https://tools.ietf.org/html/rfc5424">syslog</a>, like in the following examples (from a Linux box):</p>
+<pre><code>Oct 21 08:25:40 server pukcab(newbackup)[16993]: Creating backup set: date=1445391440 name=&quot;client&quot; schedule=&quot;daily&quot;
+Oct 21 08:36:19 client pukcab(backup)[27001]: Could not backup file=&quot;/var/log/httpd/access_log&quot; msg=&quot;size changed during backup&quot; name=&quot;client&quot; date=1445391440 error=warn</code></pre>
+<p>The <a href="https://tools.ietf.org/html/rfc5424">syslog</a> <em>APP-NAME</em> field includes the command that generated the event: <code>pukcab(</code><em>command</em><code>)</code></p>
+<p>The rest of the event uses the following format: <em>message</em> [ [<em>field</em>=<em>value</em>] … ]</p>
+<table>
+<caption>fields definition</caption>
+<thead>
+<tr class="header">
+<th style="text-align: left;">field</th>
+<th style="text-align: left;">type</th>
+<th style="text-align: left;">unit</th>
+<th style="text-align: left;">description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><code>date</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">backup <a href="#date">date</a></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>duration</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;">seconds</td>
+<td style="text-align: left;">execution time of the current command</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>elapsed</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;">seconds</td>
+<td style="text-align: left;">total execution time</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>error</code></td>
+<td style="text-align: left;">token</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">error severity (<code>fatal</code> / <code>warn</code>)</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>file</code></td>
+<td style="text-align: left;">text</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">file name</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>files</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">total number of files</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>msg</code></td>
+<td style="text-align: left;">text</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">human-readable error message</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>name</code></td>
+<td style="text-align: left;">text</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">backup <a href="#name">name</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>received</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;">bytes</td>
+<td style="text-align: left;">amount of data received by the current command</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>schedule</code></td>
+<td style="text-align: left;">text</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">backup <a href="#schedule">schedule</a></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>type</code></td>
+<td style="text-align: left;">token</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">backup type (<code>incremental</code> / <code>full</code>)</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><code>sent</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;">bytes</td>
+<td style="text-align: left;">amount of data sent by the current command</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><code>size</code></td>
+<td style="text-align: left;">number</td>
+<td style="text-align: left;">bytes</td>
+<td style="text-align: left;">total amount of data</td>
+</tr>
+</tbody>
+</table>
+<p>text values are quoted (<code>&quot;text value&quot;</code>)</p>
 <section class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>Basically, only configuration files and user data require disk space.<a href="#fnref1">↩</a></p></li>
+<li id="fn1"><p>Basically, only configuration files and user data require disk space — that’s a blatant lie, the catalog uses disk space, too (but hopefully much less).<a href="#fnref1">↩</a></p></li>
 <li id="fn2"><p>This might change in the future, though.<a href="#fnref2">↩</a></p></li>
 <li id="fn3"><p>The main development platform is Fedora Linux x86-64.<a href="#fnref3">↩</a></p></li>
 <li id="fn4"><p>Some old Pentium III machines may misbehave.<a href="#fnref4">↩</a></p></li>
