--- a/MANUAL.html
+++ b/MANUAL.html
@@ -1090,7 +1090,7 @@ Oct 21 08:36:19 client pukcab(backup)[27001]: Could not backup file=&quot;/var/l
 <td style="text-align: left;"><code>duration</code></td>
 <td style="text-align: left;">number</td>
 <td style="text-align: left;">seconds</td>
-<td style="text-align: left;">execution time of the current command</td>
+<td style="text-align: left;">execution time</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;"><code>elapsed</code></td>
@@ -1132,7 +1132,7 @@ Oct 21 08:36:19 client pukcab(backup)[27001]: Could not backup file=&quot;/var/l
 <td style="text-align: left;"><code>received</code></td>
 <td style="text-align: left;">number</td>
 <td style="text-align: left;">bytes</td>
-<td style="text-align: left;">amount of data received by the current command</td>
+<td style="text-align: left;">amount of data received</td>
 </tr>
 <tr class="even">
 <td style="text-align: left;"><code>schedule</code></td>
@@ -1141,26 +1141,25 @@ Oct 21 08:36:19 client pukcab(backup)[27001]: Could not backup file=&quot;/var/l
 <td style="text-align: left;">backup <a href="#schedule">schedule</a></td>
 </tr>
 <tr class="odd">
-<td style="text-align: left;"><code>type</code></td>
-<td style="text-align: left;">token</td>
-<td style="text-align: left;"></td>
-<td style="text-align: left;">backup type (<code>incremental</code> / <code>full</code>)</td>
-</tr>
-<tr class="even">
 <td style="text-align: left;"><code>sent</code></td>
 <td style="text-align: left;">number</td>
 <td style="text-align: left;">bytes</td>
-<td style="text-align: left;">amount of data sent by the current command</td>
+<td style="text-align: left;">amount of data sent</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td style="text-align: left;"><code>size</code></td>
 <td style="text-align: left;">number</td>
 <td style="text-align: left;">bytes</td>
 <td style="text-align: left;">total amount of data</td>
 </tr>
+<tr class="odd">
+<td style="text-align: left;"><code>type</code></td>
+<td style="text-align: left;">token</td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;">backup type (<code>incremental</code> / <code>full</code>)</td>
+</tr>
 </tbody>
 </table>
-<p>text values are quoted (<code>&quot;text value&quot;</code>)</p>
 <section class="footnotes">
 <hr />
 <ol>
